--- a/“bytetrack.ipynb
+++ b/“bytetrack.ipynb
@@ -37,7 +37,7 @@
       },
       "source": [
         "# == Download the repo content and install dependencies ==\n",
-        "!git clone https://github.com/ifzhang/ByteTrack.git\n",
+        "!git clone https://github.com/cvtone/Byte.git\n",
         "%cd /content/ByteTrack/\n",
         "%mkdir pretrained\n",
         "%cd pretrained\n",
