--- a/“bytetrack.ipynb
+++ b/“bytetrack.ipynb
@@ -38,6 +38,7 @@
       "source": [
         "# == Download the repo content and install dependencies ==\n",
         "!git clone https://github.com/cvtone/Byte.git\n",
+        "%mv Byte ByteTrack\n",
         "%cd /content/ByteTrack/\n",
         "%mkdir pretrained\n",
         "%cd pretrained\n",
